bk_ida/gccida/c2/construct_container
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/construct_container/src/i386.c:2423:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/construct_container/src/i386.c:2431:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/construct_container/src/i386.c:2443:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class v23; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/construct_container/src/i386.c:2444:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/construct_container/src/i386.c:2449:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v29; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/construct_container/src/i386.c:2455:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v35; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/construct_container/src/i386.c:2457:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v37; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/construct_container/src/i386.c:2471:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class classes; // [rsp+10h] [rbp-88h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/construct_container/src/i386.c:2475:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v55; // [rsp+34h] [rbp-64h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/construct_container/src/i386.c:2477:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class v57[2]; // [rsp+40h] [rbp-58h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/construct_container/src/i386.c:2503:15: error: use of undeclared identifier 'off_6763D0'
fprintf( v25, off_6763D0, x86_64_reg_class_name[v52[i - 1]]); 
              ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/construct_container/src/obj/i386.o] Error 1
